# bevy_jam_2023

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/levels/: level2.json
assets/logo/: logo.xcf
assets/music/OST/: OST.json
assets/patient/: patient.pxo
assets/pill/: pill.pxo
assets/platform/: platform.pxo
assets/player/: player_fall.pxo  player_idle.pxo  player_jump.pxo  player_run.pxo
assets/sounds/collect/: collect.json
assets/sounds/jump/: jump.json
levels/: level1.json
src/: components.rs  game_over.rs  main.rs  main_menu.rs
src/game/: floating_label.rs  mod.rs  patient.rs  pill.rs  platform.rs  player.rs  side_effects.rs
wasm/: index.html
