[package]
name = "bevy_jam_2023"
version = "0.1.0"
edition = "2021"
authors = ["Rehatbir Singh <rehatbir@gmail.com>"]
description = "A small game for the Bevy Jam 2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = { version = "0.18", optional = true }
bincode = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy_kira_audio = { version = "0.15", default-features = false, features = ["wav"] }

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "png",
  "hdr",
  "ktx2",
  "zstd",
  "x11",
  "filesystem_watcher",
  "android_shared_stdcxx",
  "tonemapping_luts",
]

[features]
inspector = ["dep:bevy-inspector-egui"]
